# ai-tg-bot

./: .env.example  .gitignore  README.md  app.py  bot.py  config.py  mypy.ini  package-lock.json  pyproject.toml  requirements.txt
database/: __init__.py  db.py  orm_base.py
database/models/: Block.py  Data_sources.py  Receipt.py  Ticker_ETHUSDT_15m.py  Tx.py  Users.py
handlers/: __init__.py
handlers/admin/: fetch_blocks.py  fetch_ticker.py  scrape.py
handlers/user/: about.py  database.py  fetch_blocks.py  start.py  test_db.py  user_main.py
notebooks/: modelling.ipynb
notebooks/models/: model.pkl
scraper/: scraper.py
scraper/models/: item.py
scraper/scrapers/: base.py  crypto.py
src/: bot.py  config.py
utils/: scheduler.py
utils/fetcher/: fetch_blocks.py  fetch_ticker.py
utils/helpers/: helpers.py
utils/scheduler/: scheduler.py
