[tool.poetry]
name = "ai-tg-bot"
version = "0.1.0"
description = "TG bot for python scripts control"
authors = ["mariusvi <marius@vilkaitis.lt>"]
readme = "README.md"
packages = [{include = "ai_tg_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.23.1"
poetry-dotenv-plugin = "^0.1.0"
pydantic = "^1.10.2"
bs4 = "^0.0.1"
tqdm = "^4.64.1"
asyncio = "^3.4.3"
sqlalchemy = "^1.4.45"
aioschedule = "^0.5.2"
sqlalchemy-utils = "^0.38.3"
web_scraper = { git = "https://github.com/mariusvi/web_scraper.git", branch = "main" }
python-binance = "^1.0.16"
web3 = "^5.31.3"
jupyter = "^1.0.0"
ta = "^0.10.2"
seaborn = "^0.12.2"
scikit-learn = "^1.2.0"
eli5 = "^0.13.0"
xgboost = "^1.7.3"
cloudpickle = "^2.2.0"
mplfinance = "^0.12.9b7"
types-requests = "^2.28.11.8"
types-tqdm = "^4.64.7.11"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
  | condaenv
)/
'''
max_line_length = 99
max-complexity = 18

[tool.black]
line-length = 99
preview = true
include = '/project$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
  | condaenv
)/
'''

[tool.isort]
profile = "black"
line_length = 99